根据角色返回的token不同，实现角色权限控制和拦截(现在只user和admin)